--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 
   <body>
     <div class="wrapper-masthead">
-      <div class="container">
+      <div class="container-fluid" style="padding-left: 10%; padding-right: 10%">
         <header class="masthead clearfix">
           <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
@@ -34,12 +34,12 @@
       </div>
     </div>
 
-    <div id="main" role="main" class="container">
+    <div id="main" role="main" class="container-fluid">
       {{ content }}
     </div>
 
     <div class="wrapper-footer">
-      <div class="container">
+      <div class="container-fluid">
         <footer class="footer">
           {% include svg-icons.html %}
         </footer>
