--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="post">
+<article class="post" style="padding-left: 10%; padding-right: 10%">
   <h1>{{ page.title }}</h1>
 
   <div class="entry">
