--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <div id="main" role="main" class="container-fluid">
+    <div id="main" role="main" class="container-fluid" style="padding-left: 10%; padding-right: 10%">
       {{ content }}
     </div>
 
