--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="page" style="padding-left: 10%; padding-right: 10%">
+<article class="page">
 
   <h1>{{ page.title }}</h1>
 
